--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-web.py
-pymongo
-requests
-tweetpony
-beautifulsoup4
-python-dateutil
+TweetPony==1.2.3
+beautifulsoup4==4.2.0
+distribute==0.6.34
+py==1.4.14
+pymongo==2.5.1
+pytest==2.3.5
+python-dateutil==2.1
+requests==1.2.1
+six==1.3.0
+web.py==0.37
+wsgiref==0.1.2
