--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 TweetPony==1.2.3
 beautifulsoup4==4.2.0
 distribute==0.6.34
+gevent==0.13.8
+greenlet==0.4.0
 py==1.4.14
 pymongo==2.5.1
 pytest==2.3.5
